--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,23 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Piadas do Chuck Norris
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <div class="ion-text-center">
+          <h3>Piadas de Chuck Norris</h3>
+          <p>{{piada}}</p>
+        </div>
+      </ion-col>
+      <ion-col size="12" class="ion-text-center">
+        <ion-button class="primary" (click)="BuscarNovaPiada()" >Nova Piada</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
