--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Piadas do Chuck Norris
+      Piadas de Programação
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -11,8 +11,9 @@
     <ion-row>
       <ion-col>
         <div class="ion-text-center">
-          <h3>Piadas de Chuck Norris</h3>
-          <p>{{piada}}</p>
+          <h3>Piadas de Programação</h3>
+          <p>{{setup}}</p>
+          <p>R: {{punchline}}</p>
         </div>
       </ion-col>
       <ion-col size="12" class="ion-text-center">
