--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -7,18 +7,18 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+      <ion-icon name="bug"></ion-icon>
+      <ion-label>Pokemon TCG</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-icon name="location"></ion-icon>
+      <ion-label>CEP</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab4">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 4</ion-label>
+      <ion-icon name="at-circle"></ion-icon>
+      <ion-label>Meme</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
