--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,17 +1,26 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 4
+      Memes
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 4</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 4 page"></app-explore-container>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12">
+        <div class="ion-text-center">
+          <h3> Obtenha imagens famosas de memes aleatóriamente!
+            Use as imagens para fazer seus próprios memes!</h3>
+        </div>
+      </ion-col>
+      <ion-col size="12" class="ion-text-center">
+        <ion-button class="primary" (click)="BuscarMeme()">Buscar Meme</ion-button>
+      </ion-col>
+      <ion-col size="12" class="ion-text-center">
+        <ion-img height="547" widht="386" [src]="imagesrc" style="margin: 10px;"></ion-img>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
